--- a/Generalinfo.html
+++ b/Generalinfo.html
@@ -99,6 +99,10 @@ Logs:
   Wrote HTML for website version 1.0.0
   <br>
   Re-did fonts and colors, added neon glow for center text; version 1.0.2
+  Moved site to github and edited code; version 1.1.3
+  Changed img sources to URL; version 1.1.4
+  Bugfixed 'black screen' problem; version 1.1.5
+  Fixed 'page double' bug; version 1.1.6
   <br>
 </p>
 </div>
