--- a/Stories.html
+++ b/Stories.html
@@ -7,8 +7,11 @@
     body{text-align: center;}
   </style>
   <div>
+  </head>
+  <a href="index.html">
+    <button class="button2">Back</button>
+  </a>
     <body>
-    
       <h1>
       STORIES
         <br>
