--- a/Generalinfo.html
+++ b/Generalinfo.html
@@ -98,12 +98,21 @@ Logs:
   <br>
   Wrote HTML for website version 1.0.0
   <br>
-  Re-did fonts and colors, added neon glow for center text; version 1.0.2
+  Re-did fonts and colors, added neon glow for center text; version 1.0.
+  <br>
   Moved site to github and edited code; version 1.1.3
+  <br>
   Changed img sources to URL; version 1.1.4
+  <br>
   Bugfixed 'black screen' problem; version 1.1.5
+  <br>
   Fixed 'page double' bug; version 1.1.6
   <br>
+  Bugfixes/troubleshooting beta site; version 1.2.4
+  <br>
+  Site released, accepting suggestions; 1.2.4
+  <br>
+  font changed, minor css edits; 1.2.5
 </p>
 </div>
 </html>
