--- a/Gallery.html
+++ b/Gallery.html
@@ -17,27 +17,27 @@
   <p class="p1">
   These buttons allow access to the information via google docs.
 </p>
-<a href="https://docs.google.com/document/d/1FYgkelP6XBlj0r2Ljtlt_CAlgKM-2yCUcLVUCN5tAf8/edit">
+<a href="https://docs.google.com/document/d/1FYgkelP6XBlj0r2Ljtlt_CAlgKM-2yCUcLVUCN5tAf8/edit" target="_blank">
   <button class="button">Systems</button>
 </a>
 <br>
 <br>
-<a href="https://docs.google.com/document/d/1Ft49DZ1tuWjH7sYqZBplduPPB-GdkP1trrzO0WfCzHo/edit">
+<a href="https://docs.google.com/document/d/1Ft49DZ1tuWjH7sYqZBplduPPB-GdkP1trrzO0WfCzHo/edit" target="_blank">
   <button class="button">Originizations</button>
 </a>
 <br>
 <br>
-<a href="https://docs.google.com/document/d/1eaRNT727QhKMk4QR4uwceVixXABsM4g_EjHZP4UHA7w/edit">
+<a href="https://docs.google.com/document/d/1eaRNT727QhKMk4QR4uwceVixXABsM4g_EjHZP4UHA7w/edit" target="_blank">
   <button class="button">Objects</button>
 </a>
 <br>
 <br>
-<a href="https://docs.google.com/document/d/1cwuEJSY-Hr6ru6qam8XrXx18KrB3KEWgVy3BhkeXoX4/edit">
+<a href="https://docs.google.com/document/d/1cwuEJSY-Hr6ru6qam8XrXx18KrB3KEWgVy3BhkeXoX4/edit" target="_blank">
   <button class="button">People</button>
 </a>
 <br>
 <br>
-<a href="https://docs.google.com/document/d/1qEf12cQJYDL4e46lIPizZYYiKAPnDO8z3pIuoZsi6Po/edit">
+<a href="https://docs.google.com/document/d/1qEf12cQJYDL4e46lIPizZYYiKAPnDO8z3pIuoZsi6Po/edit" target="_blank">
   <button class="button">Places</button>
 </a>
   
