--- a/Generalinfo.html
+++ b/Generalinfo.html
@@ -81,7 +81,7 @@ Please only put PG-13 content in your stories
 }
 </style>
   <p>
-    <a href="https://discord.gg/gu7QmkvE">
+    <a href="https://discord.gg/gu7QmkvE" target="_blank">
       <button class="button"> Disc. </button>
     </a>
   </p>
