--- a/Stories.html
+++ b/Stories.html
@@ -23,7 +23,7 @@
     </p1>
       <br>
       <br>
-    <a href="https://docs.google.com/forms/d/e/1FAIpQLSfXxrbmhrpLj2wstGi02d5EO-E0x51aGOTlc1Vhw0crd1hzHg/viewform">
+    <a href="https://docs.google.com/forms/d/e/1FAIpQLSfXxrbmhrpLj2wstGi02d5EO-E0x51aGOTlc1Vhw0crd1hzHg/viewform" target="_blank">
       <button class="button3">Submit a story</button>
     </a>
       <br>
@@ -32,7 +32,7 @@
       Current stories:
     </p1>
     <br>
-      <a href="https://docs.google.com/document/d/1G8ycgwK3us0RE1pCoKToH54pvJcdFDawQEYSk915DQM/view">
+      <a href="https://docs.google.com/document/d/1G8ycgwK3us0RE1pCoKToH54pvJcdFDawQEYSk915DQM/view" target="_blank">
       <button class="button">Story of two months first winner</button>
     </a>
     </body> 
