--- a/Submitsomething.html
+++ b/Submitsomething.html
@@ -26,7 +26,7 @@
 If you yourself want to be the only one who can use it, then select "creator use only" on the form. If you want other people to use, but they have to ask you first, then select, "use with creator's permission" on the form. And lastly, if you are fine with people using without having to ask you, then select, "use without asking the creator." 
 <br>
   <br>
-If you want to submit something to the lore, click <a href="https://docs.google.com/forms/d/e/1FAIpQLSdouFHKbLGaLtw3MoTiJ8ejFSpQhp3nlZs0sfLSVYWPPiDvUw/viewform?usp=sf_link">here</a>
+If you want to submit something to the lore, click <a href="https://docs.google.com/forms/d/e/1FAIpQLSdouFHKbLGaLtw3MoTiJ8ejFSpQhp3nlZs0sfLSVYWPPiDvUw/viewform?usp=sf_link" target="_blank">here</a>
 
 </div>
 </html>
