--- a/Generalinfo.html
+++ b/Generalinfo.html
@@ -113,6 +113,10 @@ Logs:
   Site released, accepting suggestions; 1.2.4
   <br>
   font changed, minor css edits; 1.2.5
+  <br>
+  Css edits including new color pallett and buttons; 1.2.6
+  <br>
+  Photos, new photos, backgrounds added in; 1.3.6
 </p>
 </div>
 </html>
